# best-retro

./: .gitignore  README.md  dev.sh  elm.json
client/: dev.sh  elm.json  test.sh
client/public/: index.html
client/src/: ActionItem.elm  Board.elm  Components.elm  DiscussionItem.elm  Email.elm  Logger.elm  Main.elm  Route.elm  Team.elm  UniqueID.elm  User.elm
client/src/Components/: Animation.elm  Card.elm  Colours.elm  Font.elm  Icons.elm  Input.elm  Label.elm  Layout.elm  Navigation.elm  Timer.elm  Transition.elm
client/src/Page/: AddTeamMembers.elm  Board.elm  CreateBoard.elm  CreateTeam.elm  Dashboard.elm  Error.elm  ForgottenPassword.elm  MyTeams.elm  ResetPassword.elm  SignIn.elm  Team.elm
client/src/Page/Board/: AddingItems.elm  Discussing.elm  DiscussingPreviousActions.elm  GroupingItems.elm  Intro.elm  Loading.elm  Shared.elm  Voting.elm
public/: index.html  retro-boards.js
server/: Cargo.toml  go.mod  go.sum  main.go
server/action/: action.go
server/board/: board.go
server/src/: main.rs  user.rs
server/team/: team.go
server/user/: user.go
src/: Components.elm  Main.elm  Route.elm  Team.elm  UniqueID.elm  User.elm
src/Components/: Colours.elm  Input.elm
src/Page/: CreateAccount.elm  CreateTeam.elm  Dashboard.elm  Home.elm  Loading.elm  MyTeams.elm  SignIn.elm  Team.elm
