[package]
name = "best-retro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
http = "0.2.1"
actix-service = "1.0.6"
serde = { version = "1", features = ["derive"] }
futures = "0.3.15"